# DELIUS-Visual-Arts-Deep-Clustering

./: .gitignore  Makefile  README.md  dvc.yaml  environment.yml  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
data/raw/: .gitignore  images.tar.gz.dvc
delius/: autoencoder_pretraining.py  clustering.py  clustering_initialization.py  clusters_evaluation.py  clusters_initialization.py  clusters_visualization.py  dec_fitting.py  deep_embedded_clustering.py  encoder_pretraining.py  feature_extraction.py  features_extraction.py  triples_filtering.py
delius/clustering/: clusters_initialization.py  clusters_visualization.py  dec_fitting.py  encoder_pretraining.py  features_extraction.py
delius/clustering/modules/: deep_embedded_clustering.py  features_autoencoder.py  features_dataset.py  features_encoder.py  features_extractor.py
delius/modules/: DEC.py  autoencoder.py  embeddings_dataset.py  encoder.py
models/clustering_pics/: .gitignore
models/dec/: .gitignore
models/kmeans/: .gitignore
models/mlflow_run_ids/: .gitignore
models/pretrained/: .gitignore
notebooks/: example.ipynb
